--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- ... (existing code) ... -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SkillSyncc LLC</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -13,7 +16,7 @@
                     <li><a href="founders.html">Founders</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
-                    <li><a href="legal.html">Terms of Service & Privacy Policy</a></li>
+                    <li><a href="tosandpolicy.html">Terms of Service & Privacy Policy</a></li>
                 </ul>
             </div>
         </nav>
@@ -23,12 +26,11 @@
         <div class="container">
             <h1>Welcome to SkillSyncc LLC</h1>
             <p>Your one-stop destination for education and social interaction.</p>
-            <p>Twitter Description: SkillSyncc LLC: Empowering Innovation Through Strategic Holding. SkillSyncc LLC serves as a dynamic holding company that fuels innovation and entrepreneurship across a diverse spectrum of ventures. With a commitment to centralizing control and decision-making, SkillSyncc LLC creates a supportive ecosystem for its subsidiaries, including cutting-edge apps and early staff-led initiatives.</p>
         </div>
     </section>
-    
-    <!-- ... (remove the app section and explore our app button) ... -->
-    
+
+    <!-- ... (other sections) ... -->
+
     <footer>
         <div class="container">
             <div class="copyright-box">
