--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="styles.css">
+
     <!-- ... (existing code) ... -->
 </head>
 <body>
