--- a/founders.html
+++ b/founders.html
@@ -22,7 +22,7 @@
                     <li><a href="founders.html">Founders</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
-                    <li><a href="tosandpolicy.html">Terms of Service & Privacy Policy</a></li>
+                    <li><a href="html.html">Terms of Service & Privacy Policy</a></li>
                 </ul>
             </div>
         </nav>
