--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="founders.html">Founders</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
-                    <li><a href="tosandpolicy.html">Terms of Service & Privacy Policy</a></li>
+                    <li><a href="legal.html">Terms of Service & Privacy Policy</a></li>
                 </ul>
             </div>
         </nav>
