--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
         </nav>
     </header>
 
-    <section id="home">
-        <div class="container">
-            <h1>Welcome to SkillSyncc LLC</h1>
-            <p>Your one-stop destination for education and social interaction.</p>
+<section id="company-description">
+    <div class="container">
+        <h2 class="section-title">About SkillSyncc LLC</h2>
+        <div class="description-box">
+            <p>SkillSyncc LLC serves as a dynamic holding company that fuels innovation and entrepreneurship across a diverse spectrum of ventures. With a commitment to centralizing control and decision-making, SkillSyncc LLC creates a supportive ecosystem for its subsidiaries, including cutting-edge apps and early staff-led initiatives.</p>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- ... (other sections) ... -->
 
