--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </div>
         </nav>
     </header>
-
+<div>
+    
+</div>
 <section id="company-description">
     <div class="container">
         <h2 class="section-title">About SkillSyncc LLC</h2>
