--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     
 </div>
 <section id="company-description">
-    <div class="container">
+    <div class="container"> 
+        <div>
+            
+        </div>
         <h2 class="section-title">About SkillSyncc LLC</h2>
         <div class="description-box">
             <p>SkillSyncc LLC serves as a dynamic holding company that fuels innovation and entrepreneurship across a diverse spectrum of ventures. With a commitment to centralizing control and decision-making, SkillSyncc LLC creates a supportive ecosystem for its subsidiaries, including cutting-edge apps and early staff-led initiatives.</p>
