--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div>
             
         </div>
-        <h2 class="section-title">About SkillSyncc LLC</h2>
+        <h2 class="section-title"><div> </div>About SkillSyncc LLC</h2>
         <div class="description-box">
             <p>SkillSyncc LLC serves as a dynamic holding company that fuels innovation and entrepreneurship across a diverse spectrum of ventures. With a commitment to centralizing control and decision-making, SkillSyncc LLC creates a supportive ecosystem for its subsidiaries, including cutting-edge apps and early staff-led initiatives.</p>
         </div>
