--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkillSyncc LLC</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Twitter Card metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SkillSyncc LLC">
+    <meta name="twitter:description" content="SkillSyncc LLC: Empowering Innovation Through Strategic Holding. SkillSyncc LLC serves as a dynamic holding company that fuels innovation and entrepreneurship across a diverse spectrum of ventures. With a commitment to centralizing control and decision-making, SkillSyncc LLC creates a supportive ecosystem for its subsidiaries, including cutting-edge apps and early staff-led initiatives.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/1166724856658788432/1169918661054697532/Copy_of_Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo1.png?ex=655726a8&is=6544b1a8&hm=8c3ed429a7790ed2d548a9b9cb6244dca74a724a37aa937a03728a246c53372d&">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SkillSyncc LLC</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
